--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -326,7 +326,7 @@ div.target-actual-container.double div.actual-container h3 {
 }
 
 div.composed-section div.section div.chart-footer-container div.actual-container h3.actual {
-  color: #ADADAD;
+  color: #109DB7;
 }
 
 div.composed-section div.section div.chart-footer-container div.actual-container h3.actual-label {
@@ -340,7 +340,7 @@ div.composed-section div.section div.chart-footer-container div.target-container
 }
 
 div.composed-section div.section div.chart-footer-container div.target-container h3.target {
-  color: #26C485;
+  color: #ADADAD;
 }
 
 div.composed-section div.section div.chart-footer-container div.target-container h3.target-label {
