use same class for section boxes

--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -950,8 +950,7 @@ div.section-animator-box {
   overflow: hidden;
 }
 
-div.section-animator-box div.section-box-new,
-div.section-animator-box div.section-box-old {
+div.section-animator-box div.section-box {
   position: absolute;
   top: 0;
   left: 0;
