--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -12,6 +12,20 @@ a:hover, a:hover *{
   text-decoration: none;
 }
 
+.clearfix:after {
+     visibility: hidden;
+     display: block;
+     font-size: 0;
+     content: " ";
+     clear: both;
+     height: 0;
+     }
+.clearfix { display: inline-block; }
+/* start commented backslash hack \*/
+* html .clearfix { height: 1%; }
+.clearfix { display: block; }
+/* close commented backslash hack */
+
 /*
  * Global add-ons
  */
