--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -896,7 +896,11 @@ div.sections-container{
 }
 
 div.table-of-contents{
-  position: relative;
+  position: fixed;
+  top: 50px;
+  overflow: scroll;
+  overflow-y: scroll;
+  height: 90%;
   padding: 10px;
   color: #2D2D2D;
 }
@@ -904,6 +908,8 @@ div.table-of-contents{
 div.table-of-contents div.table-of-contents-inner{
   width: 100%;
   height: 100%;
+  overflow: scroll;
+  overflow-y: scroll;
 }
 
 div.table-of-contents div.table-of-contents-inner div.category{
@@ -921,15 +927,37 @@ div.table-of-contents div.table-of-contents-inner div.category h3{
 }
 
 div.table-of-contents div.table-of-contents-inner div.category-section{
-  margin-left: 20px;
+  height: 57px;
+  width: 207px;
   margin-right: 20px;
-  padding-left: 20px;
+  padding-left: 10px;
   padding-top: 10px;
   padding-bottom: 10px;
 }
 
+div.table-of-contents div.table-of-contents-inner div.category-section div.category-section-close {
+  float: left;
+  opacity: 0;
+  cursor: pointer;
+  margin-top: 6px;
+  background-image: url("/img/remove_section.png");
+  width: 20px;
+  height: 20px;
+  background-size: 20px 20px;
+}
+
+div.table-of-contents div.table-of-contents-inner div.category-section:hover div.category-section-close{
+  opacity: 1;
+}
+
+div.table-of-contents div.table-of-contents-inner div.category-section a {
+  margin-left: 10px;
+  width: 160px;
+  float: left;
+}
+
 div.table-of-contents div.table-of-contents-inner div.category-section:hover{
-  background-color: rgba(0, 0, 0, 0.2);
+  background-color: rgba(0, 0, 0, 0.07);
 }
 
 div.table-of-contents div.table-of-contents-inner div.new-section{
