show the pen on section hover not only on the link bar hover

--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -683,7 +683,7 @@ div.finances div.link-bar i.editable-pen{
   cursor: pointer;
 }
 
-div.finances div.link-bar.editable:hover i.editable-pen{
+div.finances:hover div.link-bar.editable i.editable-pen{
   opacity: 1;
 }
 
