fix margin of author string

--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -981,7 +981,7 @@ div.update-footer div.update-footer-hover{
 }
 
 div.update-footer div.update-footer-hover div.author {
-  margin-top: 8px;
+  margin: 8px 0 0 35px;
 }
 
 div.update-footer div.update-footer-hover.hover {
