--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -969,12 +969,12 @@ div.section-animator-box div.section-box {
   width: 600px;
 }
 
-div.update-footer div.update-footer-hover{
+div.update-footer div.update-footer-hover {
   display: none;
   border: 1px solid rgba(0, 0, 0, 0.2);
   border-radius: 2px;
   position: absolute;
-  top: -16px;
+  top: -14px;
   left: 80px;
   background-color: white;
   padding: 5px;
@@ -986,4 +986,28 @@ div.update-footer div.update-footer-hover div.author {
 
 div.update-footer div.update-footer-hover.hover {
   display: block;
+}
+
+div.update-footer-hover:after, div.update-footer-hover:before {
+  right: 100%;
+  top: 50%;
+  border: solid transparent;
+  content: " ";
+  height: 0;
+  width: 0;
+  position: absolute;
+  pointer-events: none;
+}
+
+div.update-footer-hover:after {
+  border-color: transparent; /*rgba(136, 183, 213, 0);*/
+  border-right-color: white;
+  border-width: 7px;
+  margin-top: -7px;
+}
+div.update-footer-hover:before {
+  border-color: rgba(0, 0, 0, 0);
+  border-right-color: rgba(0, 0, 0, 0.3);
+  border-width: 8px;
+  margin-top: -8px;
 }
