--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -2,6 +2,7 @@
 
 html, body{
   font-family: "proxima-nova", sans-serif;
+  height: 100%;
 }
 
 a{
@@ -149,8 +150,8 @@ div.chart-container{
 }
 
 div.report-list div.chart-container{
-  margin-left: 300px;
-  width: 600px;
+  /*margin-left: 300px;
+  width: 600px;*/
   margin-top: 30px;
 }
 
@@ -286,11 +287,16 @@ div.composed-section div.composed-section-body div.section{
   text-align: left;
 }
 
+div.composed-section div.section div.chart-header-container {
+  text-align: left;
+}
+
 div.composed-section div.section div.chart-footer-container {
   text-align: center;
 }
 
-div.composed-section div.section div.chart-footer-container h3 {
+div.composed-section div.section div.chart-header-container h3,
+div.composed-section div.section div.chart-footer-container h3, {
   margin-top: 10px;
   margin-bottom: 0px;
 }
@@ -300,15 +306,25 @@ div.composed-section div.section div.period-container p {
   margin-bottom: 0px;
 }
 
+div.composed-section div.section div.chart-header-container div.target-actual-container{
+  width: 250px;
+  height: 70px;
+}
+
 div.composed-section div.section div.chart-footer-container div.target-actual-container {
   width: 150px;
   height: 70px;
   margin-left: 225px;
 }
 
+div.composed-section div.section div.chart-header-container div.target-actual-container.double,
 div.composed-section div.section div.chart-footer-container div.target-actual-container.double {
   width: 300px;
   margin-left: 150px;
+}
+
+div.composed-section div.section div.chart-header-container div.actual-container{
+  width: 250px;
 }
 
 div.composed-section div.section div.chart-footer-container div.actual-container {
@@ -316,10 +332,11 @@ div.composed-section div.section div.chart-footer-container div.actual-container
   float: right;
 }
 
+div.composed-section div.section div.chart-header-container.chart-header div.actual-container,
 div.composed-section div.section div.chart-footer-container.chart-header div.actual-container {
-  width: 600px;
+  /*width: 600px;*/
   float: none;
-  margin-left: -225px;
+  /*margin-left: -225px;*/
 }
 
 div.target-actual-container div.target-container h3 {
@@ -332,46 +349,54 @@ div.target-actual-container.double div.actual-container h3 {
   margin-left: 15px;
 }
 
-div.composed-section div.section div.chart-footer-container div.actual-container h3.actual {
+div.chart-header-container div.actual-container h3.actual {
+  margin-bottom: 10px;
+}
+
+div.actual-container h3.actual {
   color: #109DB7;
 }
 
-div.composed-section div.section div.chart-footer-container div.actual-container h3.actual.gray {
+div.actual-container h3.actual.gray {
   color: #ADADAD;
 }
 
-div.composed-section div.section div.chart-footer-container div.actual-container h3.actual.green {
+div.actual-container h3.actual.green {
   color: #26C485;
 }
 
-div.composed-section div.section div.chart-footer-container div.actual-container h3.actual.red {
+div.actual-container h3.actual.red {
   color: #d72a46;
 }
 
-div.composed-section div.section div.chart-footer-container div.actual-container h3.actual-label {
+div.chart-header-container div.actual-container h3.actual-label {
+  margin-top: 10px;
+}
+
+div.actual-container h3.actual-label {
   font-size: 12px;
   font-weight: 700;
 }
 
-div.composed-section div.section div.chart-footer-container div.actual-container h3.actual-label.gray {
+div.actual-container h3.actual-label.gray {
   color: #ADADAD;
 }
 
-div.composed-section div.section div.chart-footer-container div.target-container {
+div.target-container {
   width: 150px;
   float: left;
 }
 
-div.composed-section div.section div.chart-footer-container div.target-container h3.target {
+div.target-container h3.target {
   color: #ADADAD;
 }
 
-div.composed-section div.section div.chart-footer-container div.target-container h3.target-label {
+div.target-container h3.target-label {
   font-size: 12px;
   font-weight: 700;
 }
 
-div.composed-section div.section div.chart-footer-container div.period-container {
+div.period-container {
   text-transform: capitalize;
   font-weight: bold;
   color: black;
@@ -590,7 +615,6 @@ div.rich-editor-container button.collapse-button{
 }
 
 div.editable-title-container{
-  position: relative;
   height: 55px;
   margin-top: 30px;
   margin-bottom: 10px;
@@ -824,7 +848,7 @@ div.revisions-navigator div.revisions-navigator-right div.double-next{
 
 hr.section-separator{
   background-color: rgba(0, 0, 0, 0.2);
-  width: 600px;
+  width: 100%;
   height: 1px;
   border: 0px solid transparent;
   border-top: 0px solid transparent;
