--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -1006,26 +1006,32 @@ div.table-of-contents div.table-of-contents-inner div.new-section div.new-sectio
   position: relative;
   top: 4px;
   left: 0px;
-  width: 100%;
+  width: 183px;
   background-color: rgba(0, 0, 0, 0.1);
   display: none;
 }
 
-div.table-of-contents div.table-of-contents-inner div.new-section.hover div.new-section-internal {
+div.table-of-contents div.table-of-contents-inner div.new-section:hover div.new-section-internal {
   display: block;
 }
 
-div.table-of-contents div.add-section {
+div.table-of-contents div.table-of-contents-inner div.new-section div.add-section {
   width: 20px;
   height: 20px;
   background-color: rgba(0, 0, 0, 0.1);
   border-radius: 2px;
-  position: absolute;
+  position: relative;
+  left: 186px;
+  top: -6px;
   display: none;
   padding: 2px 0 0 4px;
   color: white;
   font-size: 14px;
   cursor: pointer;
+}
+
+div.table-of-contents div.table-of-contents-inner div.new-section:hover div.add-section {
+  display: block;
 }
 
 div.table-of-contents div.add-section:after {
@@ -1067,21 +1073,15 @@ div.table-of-contents div.table-of-contents-inner div.category-section a p.secti
   margin-bottom: 0px;
 }
 
-div.new-section-popover-container {
+div#new-section-popover-container {
   display: none;
-  position: absolute;
-  width: 500px;
-  height: 521px;
+  position: fixed;
+  width: 100%;
+  height: 100%;
   top: 0;
   left: 0;
-  background-image: url("/img/popover.png");
-  background-repeat: no-repeat;
-  background-color: white;
-  background-position: 0 0;
-  background-size: 500px 521px;
-  z-index: 1000;
-  border: 2px solid rgba(0, 0, 0, 0.5);
-  border-radius: 4px;
+  background-color: rgba(0, 0, 0, 0.4);
+  z-index: 1031;
 }
 
 div.section-animator-box {
@@ -1131,9 +1131,62 @@ div.update-footer-hover:after {
   border-width: 7px;
   margin-top: -7px;
 }
+
 div.update-footer-hover:before {
   border-color: rgba(0, 0, 0, 0);
   border-right-color: rgba(0, 0, 0, 0.3);
   border-width: 8px;
   margin-top: -8px;
+}
+
+div.popover-background {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.3);
+  opacity: 0;
+}
+
+div.new-section-popover {
+  position: absolute;
+  width: 600px;
+  height: 400px;
+  top: 50%;
+  left: 50%;
+  margin-top: -200px;
+  margin-left: -300px;
+  background-color: white;
+  text-align: center;
+  border: 2px solid rgba(0, 0, 0, 0.8);
+  border-radius: 4px;
+  overflow: auto;
+}
+
+div.new-section-popover div.new-section-container {
+  margin: 10px;
+  background-color: white;
+  text-align: left;
+}
+
+div.new-section-popover div.new-section-container div.new-section-category {
+  margin-left: 10px;
+}
+
+div.new-section-popover div.new-section-container div.new-section-category h3 {
+  font-size: 16px;
+  font-weight: 600;
+}
+
+div.new-section-popover div.new-section-container div.new-section-category div.new-section-category-section {
+  margin-left: 20px;
+}
+
+div.new-section-popover div.new-section-container div.new-section-category div.new-section-category-section h4 {
+  font-size: 14px;
+  font-weight: 600;
+  color: black;
+}
+
+div.new-section-popover div.new-section-container div.new-section-category div.new-section-category-section p {
+  font-size: 12px;
+  color: black;
 }
