--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -1064,6 +1064,7 @@ div.table-of-contents div.table-of-contents-inner div.category-section a p.secti
   color: #2D2D2D;
   font-size: 16px;
   margin-bottom: 0px;
+  white-space: nowrap;
 }
 
 div.table-of-contents div.table-of-contents-inner div.category-section a p.section-date {
