--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -1149,46 +1149,90 @@ div.popover-background {
 
 div.new-section-popover {
   position: absolute;
-  width: 600px;
-  height: 400px;
+  width: 390px;
+  height: 460px;
   top: 50%;
   left: 50%;
-  margin-top: -200px;
-  margin-left: -300px;
+  margin-top: -220px;
+  margin-left: -145px;
   background-color: white;
   text-align: center;
-  border: 2px solid rgba(0, 0, 0, 0.8);
+  border: 1px solid rgba(0, 0, 0, 0.8);
   border-radius: 4px;
   overflow: auto;
-  padding: 10px;
+  padding: 20px 10px 10px 10px;
+}
+
+div.new-section-popover > h4{
+  font-size: 14px;
+  margin-top: 10px;
+  margin-bottom: 30px;
 }
 
 div.new-section-popover div.new-section-container {
-  margin: 10px;
   background-color: white;
   text-align: left;
 }
 
 div.new-section-popover div.new-section-container div.new-section-category {
-  margin-left: 10px;
 }
 
 div.new-section-popover div.new-section-container div.new-section-category h3 {
-  font-size: 16px;
-  font-weight: 600;
+  font-size: 15px;
+  font-weight: bold;
+  margin: 10px 10px 20px 10px;
 }
 
-div.new-section-popover div.new-section-container div.new-section-category div.new-section-category-section {
-  margin-left: 20px;
+div.new-section-category-section {
+  height: 65px;
 }
 
-div.new-section-popover div.new-section-container div.new-section-category div.new-section-category-section h4 {
+div.new-section-category-section div.section-icon-container {
+  width: 40px;
+  height: 40px;
+  background-color: rgb(229, 229, 229);
+  border-radius: 20px;
+  margin: 0px 15px 15px 15px;
+  float: left;
+}
+
+div.new-section-category-section div.section-icon-container img.section-placeholder {
+  width: 20px;
+  height: 20px;
+  margin: 10px;
+  color: blue;
+}
+
+div.new-section-category-section div.section-icon-container img.section-placeholder svg path{
+  fill: #94d31b;
+}
+
+div.new-section-category-section div.section-details {
+  float: right;
+  width: 295px;
+}
+
+div.new-section-category-section div.section-details h4 {
+  margin: 5px 0 0 0;
   font-size: 14px;
-  font-weight: 600;
+}
+
+div.new-section-category-section div.section-details p {
+  font-size: 13px;
+}
+
+div.new-section-category-section div.section-details h4,
+div.new-section-category-section div.section-details p {
   color: black;
 }
 
-div.new-section-popover div.new-section-container div.new-section-category div.new-section-category-section p {
-  font-size: 12px;
-  color: black;
+div.new-section-popover-close{
+  position: absolute;
+  top: 6px;
+  left: 8px;
+  width: 24px;
+  height: 24px;
+  background-image: url("/img/close_popover.png");
+  background-size: 24px 24px;
+  background-position: 0 0;
 }
