--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -945,6 +945,34 @@ div.table-of-contents div.table-of-contents-inner {
   overflow-y: auto;
 }
 
+div.table-of-contents div.table-of-contents-inner div.add-new-section-top{
+  color: black;
+  cursor: pointer;
+  margin: 10px 0 0px 30px;
+}
+
+div.table-of-contents div.table-of-contents-inner div.add-new-section-top div.add-new-section-plus{
+  background-color: rgba(0, 0, 0, 0.2);
+  border-radius: 8px;
+  width: 16px;
+  height: 16px;
+  float: left;
+}
+
+div.table-of-contents div.table-of-contents-inner div.add-new-section-top div.add-new-section-plus i{
+  margin: 1px 0 0 3px;
+  font-size: 12px;
+  color: white;
+}
+
+div.table-of-contents div.table-of-contents-inner div.add-new-section-top h4{
+  font-size: 12px;
+  font-variant: small-caps;
+  float: left;
+  width: 190px;
+  margin: 2px 0 0 5px;
+}
+
 div.table-of-contents div.table-of-contents-inner div.category {
   margin-left: 30px;
 }
