use a fixed height for the chart div

--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -167,6 +167,7 @@ div.report-list div.report-list-left {
 
 div.chart-container {
   width: 600px;
+  height: 290px;
 }
 
 div.report-list div.chart-container{
